cmake_minimum_required(VERSION 3.29)
project(untitled2 C)

set(CMAKE_C_STANDARD 11)

add_executable(untitled2 main.c
        stackImplementation.c
        ppp.c
        QueueImplementation.c
        LinkedLIst.c
        2024-09-30.c
        SortingAlgorithms.c
        BinaryTree.c
        testp2.c
        recursion.c
        sortingPerformance.c
        Fundamentals.c
        HashMap.c
        bits.c
        bloomFilter.c
        DynamicProgramming.c
        roundFLoat.c
        countWordsFrecuency.c
        huffmanDecrypt.c
        huffmanGreedy.c
        decodeHuffman.c
        codeHuffman.c
)
